# docs/swagger.json
@@ -23,6 +23,12 @@
                         "description": "all|phone|email|name",
                         "name": "filter",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "term matched against the name, the phone or the email",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -116,6 +122,12 @@
                         "type": "string",
                         "description": "all|note|reminder|todo",
                         "name": "filter",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "term matched against the note content",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
